--- a/BingeSeriesApp/BingeSeriesApp/Home/View/CustomSerieTableViewCell.xib
+++ b/BingeSeriesApp/BingeSeriesApp/Home/View/CustomSerieTableViewCell.xib
@@ -46,7 +46,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Md2-dW-j0I">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Md2-dW-j0I">
                         <rect key="frame" x="169" y="138" width="119" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="S8k-4V-ObR"/>
